--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ div.maindiv {
 div.footer {
     background-color: white;
     margin: auto;
-    text-align: center;
+    text-align: left;
     color: black;
     width: 500px;
     padding: 20px;
